--- a/static/program.css
+++ b/static/program.css
@@ -119,15 +119,15 @@ input[type="radio"]{
 }
 .introduction{
     width: 710px;
-    height: 640px;
-    margin: 10px 10px 10px 10px;
+    height: auto;
+    margin: 10px;
     text-align: center;
 }
 .introduction-1{
     width: 700px;
-    height: 630px;
+    height: auto;
     line-height: 50px; /*行距*/
-    padding: 10px 10px 10px 10px;
+    padding: 10px;
     border: 6px solid;
     border-color: #fff;
     text-align: center;
