--- a/static/program.css
+++ b/static/program.css
@@ -132,3 +132,43 @@ input[type="radio"]{
     border-color: #fff;
     text-align: center;
 }
+.content{
+    width: 1150px;
+    height: auto;
+    align-content: center;
+    margin: 630px 0px 40px 150px;
+}
+
+.content img{
+    position:relative;
+    width: 300px;
+    height: 300px;
+    clip: rect(0px,300px,300px,0px);
+    object-fit: cover;
+    transition:0.6s ease-in;
+    margin: 5px;
+    padding: 10px;
+    border: 6px solid;
+    border-color: #fff;
+    align-content: center;
+}
+.i400-300:hover{
+    width: 400px;
+    height: 300px;
+}
+.i350-350:hover{
+    width: 350px;
+    height: 350px;
+}
+.i300-400:hover{
+    width: 300px;
+    height: 400px;
+}
+.i270-480:hover{
+    width: 270px;
+    height: 480px;
+}
+.i480-270:hover{
+    width: 480px;
+    height: 270px;
+}
