--- a/static/program.css
+++ b/static/program.css
@@ -5,7 +5,7 @@ body{
     min-height: 100%;
     background-color: #DEE7FD;
 }
-.content{
+.content_main{
     width: 1000px;
     height: 400px;
     margin: auto;
